--- a/themes/hugo-theme-learn/layouts/shortcodes/attachments.html
+++ b/themes/hugo-theme-learn/layouts/shortcodes/attachments.html
@@ -4,13 +4,15 @@
 		<i class="fas fa-paperclip" aria-hidden="true"></i>
 		{{with .Get "title"}}{{.}}{{else}}{{T "Attachments-label"}}{{end}}
 	</label>
-	{{if eq .Page.File.BaseFileName "index"}}
+	{{if and .Page.File (eq .Page.File.BaseFileName "index")}}
 		{{$.Scratch.Add "filesName" "files"}}
-	{{else}}
+	{{else if .Page.File}}
 		{{$.Scratch.Add "filesName" (printf "%s.files" .Page.File.BaseFileName)}}
+	{{else}}
+		{{$.Scratch.Add "filesName" "files"}}
 	{{end}}
 	<div class="attachments-files">
-	{{ range (readDir (printf "./content/%s%s" .Page.File.Dir ($.Scratch.Get "filesName")) ) }}
+	{{ if .Page.File }}{{ range (readDir (printf "./content/%s%s" .Page.File.Dir ($.Scratch.Get "filesName")) ) }}
 		{{ $fileDir := replace $.Page.File.Dir "\\" "/" }}
 		{{if ($.Get "pattern")}}
 			{{if (findRE ($.Get "pattern") .Name)}}
@@ -30,6 +32,7 @@
 			</li>
 		{{end}}
 	{{end}}
+	{{ end }}
 	<div>
 	{{.Inner}}
 </section>
