--- a/themes/hugo-theme-learn/layouts/partials/header.html
+++ b/themes/hugo-theme-learn/layouts/partials/header.html
@@ -47,7 +47,7 @@
               {{if not .IsHome}}
               <div>
                 <div id="top-bar">
-                {{ if and (or .IsPage .IsSection) .Site.Params.editURL }}
+                {{ if and (or .IsPage .IsSection) .Site.Params.editURL .File }}
                   {{ $File := .File }}
                   {{ $Site := .Site }}
                   {{with $File.Path }}
